chore(spring): Spring Boot 3 Migration #relates to OPT-6608 (#7635)
* chore(spring): Spring Boot 3 Migration after taking care of code smells #relates to OPT-6608

* chore(spring): Spring Boot 3 Migration updating libraries to most current
#relates to OPT-6608

* chore(spring): Rolling back Junit update and removing unused imports
#relates to OPT-6608

* chore(spring): Implemented changes from PR review
#relates to OPT-6608