@@ -50,20 +50,22 @@
     <!-- https://www.elastic.co/guide/en/elasticsearch/client/java-api/6.5/_using_another_logger.html -->
     <elasticsearch.log4j.version>2.20.0</elasticsearch.log4j.version>
     <guava.version>32.1.2-jre</guava.version>
-    <spring.boot.version>2.7.12</spring.boot.version>
-    <spring.version>5.3.27</spring.version>
-    <mockito.version>5.2.0</mockito.version>
+    <spring.boot.version>3.0.9</spring.boot.version>
+    <spring.version>6.0.11</spring.version>
+    <mockito.version>5.4.0</mockito.version>
+    <mockito-inline.version>5.2.0</mockito-inline.version>
     <httpclient.version>4.5.14</httpclient.version>
-    <junit.jupiter.version>5.10.0</junit.jupiter.version>
-    <junit.platform.version>1.10.0</junit.platform.version>
-    <mockserver.version>5.14.0</mockserver.version>
+    <junit.jupiter.version>5.9.3</junit.jupiter.version>
+    <junit.platform.version>1.9.3</junit.platform.version>
+    <mockserver.version>5.15.0</mockserver.version>
     <quartz.version>2.3.2</quartz.version>
     <assertj.version>3.24.2</assertj.version>
     <postgres.version>42.6.0</postgres.version>
+    <jakarta.rs-api.version>3.1.0</jakarta.rs-api.version>
 
     <lombok.version>1.18.28</lombok.version>
-    <logback.version>1.2.11</logback.version>
-    <slf4j.version>1.7.36</slf4j.version>
+    <logback.version>1.4.8</logback.version>
+    <slf4j.version>2.0.7</slf4j.version>
 
     <version.node>v16.16.0</version.node>
     <version.yarn>v1.22.18</version.yarn>
@@ -80,6 +82,9 @@
       ${project.build.directory}/surefire-reports/,${project.build.directory}/failsafe-reports/,${project.build.directory}/failsafe-reports/1/,${project.build.directory}/failsafe-reports/2/,${project.build.directory}/failsafe-reports/3/,${project.build.directory}/failsafe-reports/4/
     </sonar.junit.reportPaths>
     <h2.version>2.2.220</h2.version>
+
+    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
   </properties>
 
   <dependencyManagement>
@@ -290,7 +295,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-inline</artifactId>
-      <version>${mockito.version}</version>
+      <version>${mockito-inline.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -315,6 +320,12 @@
       <groupId>io.github.netmikey.logunit</groupId>
       <artifactId>logunit-logback</artifactId>
       <version>1.1.3</version>
+      <exclusions>
+        <exclusion>
+          <groupId>ch.qos.logback</groupId>
+          <artifactId>logback-classic</artifactId>
+        </exclusion>
+      </exclusions>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -338,7 +349,7 @@
     <dependency>
       <groupId>io.netty</groupId>
       <artifactId>netty-codec-http</artifactId>
-      <version>4.1.93.Final</version>
+      <version>4.1.96.Final</version>
     </dependency>
   </dependencies>
 
@@ -373,7 +384,7 @@
             <skipTests>${skip.unit.tests}</skipTests>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <useModulePath>false</useModulePath>
-            <argLine>--illegal-access=permit</argLine>
+            <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
           </configuration>
           <dependencies>
             <dependency>
@@ -390,7 +401,6 @@
           <configuration>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <useModulePath>false</useModulePath>
-            <argLine>--illegal-access=permit -Xms256m -Xmx1024m</argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -536,7 +546,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version>
         <configuration>
-          <release>11</release>
+          <release>17</release>
         </configuration>
       </plugin>
     </plugins>
